--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/react": "^1.6.9",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "dayjs": "^1.10.7",
     "firebase": "^9.1.3",
     "framer-motion": "^4",
     "next": "11.1.2",
